--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p>Aos oito anos de idade, ele lembra de ouvir o pai tocando e cantando em casa gêneros musicais como pagode, axé e MPB.
 
                         Teto começou a compor aos doze anos e até hoje grava tudo em seu quarto.[3] Teto gravou muitas prévias musicais nesse quarto...</p>
-                    <a href="g" class="btn btn-dark">Ler mais...</a>
+                    <a href="https://pt.wikipedia.org/wiki/Teto_(rapper)" class="btn btn-dark">Ler mais...</a>
                 </div>
             </div>
             <div class="row">
